# 2D-LiDAR-SLAM-teste

./: .gitmodules  LICENSE  README.md
log/: latest_list
src/dynamic_lidar_detector/: CMakeLists.txt  package.xml
src/dynamic_lidar_detector/launch/: dynamic_detection.launch  ideal_detection.launch
src/dynamic_lidar_detector/rviz/: dynamic_display.rviz  dynamic_view.rviz
src/dynamic_lidar_detector/scripts/: dynamic_detector_node.py  ideal_detection.py
src/taurob_robots_description/: CMakeLists.txt  Dockerfile  README.md  package.xml  setup.py
src/taurob_robots_description/bagfiles/Acurácia/: param_filtro.pgf  sem_filtro.pgf  so_filtro.pgf
src/taurob_robots_description/config/: tracker.perspective
src/taurob_robots_description/launch/: default.rviz  inspector_datmo.launch  inspector_longarm_gazebo.launch  taurob_inspector_longarm_rviz.launch
src/taurob_robots_description/misc/: .bash_aliases  gazebo.list  run_docker_simulation.sh
src/taurob_robots_description/rviz/: ogrip2_display.rviz
src/taurob_robots_description/script/: filter_box.py  initial_joint_angles.py  inspector.sh  install_dep.sh  install_dep_docker.sh  move_3_box.py  move_box_circular.py  move_box_node.py  move_box_triangular.py  plot_bag.py  plot_bag2.py  pontilhado.py  publish_flippers.py  robot_footprint_publisher.py  rqt_plot_data_publisher.py  rsme.py  taurob_move.py  template.py  visualization_joints.py
src/taurob_robots_description/urdf/: imu_yostlab_macros.urdf.xacro  inspector_camera_assembly.xacro  lidar.urdf.xacro  taurob_camera.gazebo  taurob_camera.xacro  taurob_logical_camera.gazebo
src/taurob_robots_description/worlds/: 3_box.world  caxias.world
(+40 files in other folders)
