<?xml version="1.0"?>
<package format="2">
  <name>taurob_robots_description</name>
  <version>1.0.0</version>
  <description>URDF models for the taurob robot(s).</description>
  <maintainer email="support@taurob.com">taurob GmbH</maintainer>
  <license>Commercial</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>hector_xacro_tools</exec_depend>
  <exec_depend>velodyne_description</exec_depend>

  <export></export>
</package>
